--- a/textpattern/admin-themes/hive/assets/css/textpattern.css
+++ b/textpattern/admin-themes/hive/assets/css/textpattern.css
@@ -3099,6 +3099,7 @@ button {
  */
   .txp-form-field {
     margin: 1em 0;
+    vertical-align: top;
   }
   /**
  * Label/value form field pairings.
