--- a/textpattern/admin-themes/hiveneutral/assets/css/textpattern.css
+++ b/textpattern/admin-themes/hiveneutral/assets/css/textpattern.css
@@ -3078,6 +3078,7 @@ button {
  */
   .txp-form-field {
     margin: 1em 0;
+    vertical-align: top;
   }
   /**
  * Label/value form field pairings.
